// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZAxis should render a circle per explicit tickValues, ignoring ticks 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="chart-io z-axis"
      style="pointer-events: none;"
    >
      <g
        class="z-axis-tick"
      >
        <circle
          class="z-axis-ring"
          cx="155"
          cy="155"
          r="25"
          style="fill: none; stroke: #333333; stroke-opacity: 0.8; stroke-width: 1;"
        />
        <line
          class="z-axis-leader"
          style="stroke: #333333; stroke-opacity: 0.8; stroke-width: 1; stroke-dasharray: 2,2;"
          x1="155"
          x2="196"
          y1="130"
          y2="130"
        />
        <text
          class="z-axis-label"
          dominant-baseline="middle"
          style="fill: #333333; font-family: sans-serif; user-select: none;"
          text-anchor="start"
          x="202"
          y="130"
        >
          100
        </text>
      </g>
      <g
        class="z-axis-tick"
      >
        <circle
          class="z-axis-ring"
          cx="155"
          cy="173"
          r="7"
          style="fill: none; stroke: #333333; stroke-opacity: 0.8; stroke-width: 1;"
        />
        <line
          class="z-axis-leader"
          style="stroke: #333333; stroke-opacity: 0.8; stroke-width: 1; stroke-dasharray: 2,2;"
          x1="155"
          x2="196"
          y1="166"
          y2="166"
        />
        <text
          class="z-axis-label"
          dominant-baseline="middle"
          style="fill: #333333; font-family: sans-serif; user-select: none;"
          text-anchor="start"
          x="202"
          y="166"
        >
          10
        </text>
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`ZAxis should render a nested circle, leader line and label per representative value 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="chart-io z-axis"
      style="pointer-events: none;"
    >
      <g
        class="z-axis-tick"
      >
        <circle
          class="z-axis-ring"
          cx="155"
          cy="155"
          r="25"
          style="fill: none; stroke: #333333; stroke-opacity: 0.8; stroke-width: 1;"
        />
        <line
          class="z-axis-leader"
          style="stroke: #333333; stroke-opacity: 0.8; stroke-width: 1; stroke-dasharray: 2,2;"
          x1="155"
          x2="196"
          y1="130"
          y2="130"
        />
        <text
          class="z-axis-label"
          dominant-baseline="middle"
          style="fill: #333333; font-family: sans-serif; user-select: none;"
          text-anchor="start"
          x="202"
          y="130"
        >
          100
        </text>
      </g>
      <g
        class="z-axis-tick"
      >
        <circle
          class="z-axis-ring"
          cx="155"
          cy="165"
          r="15"
          style="fill: none; stroke: #333333; stroke-opacity: 0.8; stroke-width: 1;"
        />
        <line
          class="z-axis-leader"
          style="stroke: #333333; stroke-opacity: 0.8; stroke-width: 1; stroke-dasharray: 2,2;"
          x1="155"
          x2="196"
          y1="150"
          y2="150"
        />
        <text
          class="z-axis-label"
          dominant-baseline="middle"
          style="fill: #333333; font-family: sans-serif; user-select: none;"
          text-anchor="start"
          x="202"
          y="150"
        >
          50
        </text>
      </g>
      <g
        class="z-axis-tick"
      >
        <circle
          class="z-axis-ring"
          cx="155"
          cy="175"
          r="5"
          style="fill: none; stroke: #333333; stroke-opacity: 0.8; stroke-width: 1;"
        />
        <line
          class="z-axis-leader"
          style="stroke: #333333; stroke-opacity: 0.8; stroke-width: 1; stroke-dasharray: 2,2;"
          x1="155"
          x2="196"
          y1="170"
          y2="170"
        />
        <text
          class="z-axis-label"
          dominant-baseline="middle"
          style="fill: #333333; font-family: sans-serif; user-select: none;"
          text-anchor="start"
          x="202"
          y="170"
        >
          0
        </text>
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`ZAxis should render on the left, hanging from the top, when positioned there 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="chart-io z-axis"
      style="pointer-events: none;"
    >
      <g
        class="z-axis-tick"
      >
        <circle
          class="z-axis-ring"
          cx="45"
          cy="45"
          r="25"
          style="fill: none; stroke: #333333; stroke-opacity: 0.8; stroke-width: 1;"
        />
        <line
          class="z-axis-leader"
          style="stroke: #333333; stroke-opacity: 0.8; stroke-width: 1; stroke-dasharray: 2,2;"
          x1="45"
          x2="4"
          y1="70"
          y2="70"
        />
        <text
          class="z-axis-label"
          dominant-baseline="middle"
          style="fill: #333333; font-family: sans-serif; user-select: none;"
          text-anchor="end"
          x="-2"
          y="70"
        >
          100
        </text>
      </g>
      <g
        class="z-axis-tick"
      >
        <circle
          class="z-axis-ring"
          cx="45"
          cy="35"
          r="15"
          style="fill: none; stroke: #333333; stroke-opacity: 0.8; stroke-width: 1;"
        />
        <line
          class="z-axis-leader"
          style="stroke: #333333; stroke-opacity: 0.8; stroke-width: 1; stroke-dasharray: 2,2;"
          x1="45"
          x2="4"
          y1="50"
          y2="50"
        />
        <text
          class="z-axis-label"
          dominant-baseline="middle"
          style="fill: #333333; font-family: sans-serif; user-select: none;"
          text-anchor="end"
          x="-2"
          y="50"
        >
          50
        </text>
      </g>
      <g
        class="z-axis-tick"
      >
        <circle
          class="z-axis-ring"
          cx="45"
          cy="25"
          r="5"
          style="fill: none; stroke: #333333; stroke-opacity: 0.8; stroke-width: 1;"
        />
        <line
          class="z-axis-leader"
          style="stroke: #333333; stroke-opacity: 0.8; stroke-width: 1; stroke-dasharray: 2,2;"
          x1="45"
          x2="4"
          y1="30"
          y2="30"
        />
        <text
          class="z-axis-label"
          dominant-baseline="middle"
          style="fill: #333333; font-family: sans-serif; user-select: none;"
          text-anchor="end"
          x="-2"
          y="30"
        >
          0
        </text>
      </g>
    </g>
  </svg>
</DocumentFragment>
`;
